assets/css/style.css
/* ... */
section.page.blog article:first-of-type .more {
    color: #fff;
}

article>.thumb {
    margin: -16px -32px 0;
    width: calc(100% + 64px);
}

ul.inline li {
    padding: .3em;
    display: inline-table;
}

ul.inline {
    margin: 0;
    padding: 0;
}

ul.cards {
    padding: 0;
    margin: 0;
}

ul.cards li {
    list-style: none;
    background-color: #fff;
    padding: .8rem;
    margin: 0 0 .8rem 0;
    border-radius: .3em;
    border: 1px solid #d2d2d2;
}

ul.cards.inline li {
    padding: 1em 2em;
    margin: 0 .8rem .8rem 0;
}

ul.cards li.link {
    padding: 0;
}

ul.cards li.link a {
    display: block;
    padding: 1em 2em;
}

ul.cards li a {
    text-decoration: none;
}

ul.cards.has-hover li:hover, ul.cards li.active {
    background-color: #d5e1f340;
    border-color: #1c71d8;
}

ul.cards.has-hover li:hover, ul.cards.has-hover li:hover a,ul.cards li.active, ul.cards li.active a {
    color: #1c71d8;
}

section.downloads .container {
    box-sizing: border-box;
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    align-items: center;
    gap: 40px;
}

section.downloads .container>.image {
    grid-column: span 7;
    order: 1;
    object-fit: cover;
}

section.downloads .container>.info {
    grid-column: 8/span 6;
    order: 2;
}

section.downloads .container>.image img {
    width: 100%;
}

.page.blog article:first-of-type,
.button:not(.link),
.card,
.modal>div,
.next,
.message,
img.shadow,
.dropdown>ul,
.video-frame {
    box-shadow: 0 1px 3px rgb(0 0 0 / 10%), 0 5px 10px rgb(0 0 0 / 6%);
}

nav a:not(.brand):not(.button):hover,
article p a {
    color: #1c71d8;
}

section.heading .background::after,
section.heading .background {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 0;
    background-position: center;
    background-size: cover;
    background-attachment: fixed;
    /* filter: grayscale(1); */
    opacity: 0.1;
}

.heading .container {
    position: relative;
    z-index: 1;
}

.button.icon-slot {
    padding: .5rem 1rem .5rem 0;
}

.button.icon-slot .mdi,
.button.icon-slot .icon {
    background-color: #00000026;
    padding: 6px;
    width: 30px;
    height: 23px;
    margin: -8px 0;
    border-top-left-radius: .3rem;
    border-bottom-left-radius: .3rem;
    text-align: center;
    position: relative;
}

.release-day {
    margin: 30px 0 10px 0;
    text-align: center;
}

.release-day p {
    font-size: 1.4em;
    margin: 0 0 17px 0;
}

.release-day strong {
    font-size: 4em;
    font-family: 'Cookie', cursive;
    font-weight: 300;
    color: #0e3f7b;
}

.release-day div {
    display: inline-block;
}

.store {
    display: grid;
    grid-template-columns: auto auto auto;
    gap: 10px;
}

.dropdown .toggler {
    cursor: pointer;
}

.card,
.modal>div,
.dropdown>ul,
.video-frame {
    background-color: #fff;
    border-radius: .3rem;
    min-height: 6rem;
    position: relative;
    z-index: 1;
}

.card-content {
    padding: 1rem;
}

.card-content h3 {
    margin: 0;
}

.store .card-content h3 img {
    height: 32px;
    display: inline-table;
    vertical-align: middle;
}

.card-content .actions {
    text-align: right;
}

.card-content .actions a {
    padding: 0 0 0 1rem;
    cursor: pointer;
    text-decoration: none;
    display: flex;
    align-items: center;
    gap: 5px;
}

.modal {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background: #2c2e3299;
    backdrop-filter: blur(3px);
    visibility: hidden;
    opacity: 0;
    z-index: 9;
}

.modal.show {
    visibility: visible;
    opacity: 1;
}

.modal>div {
    max-width: 800px;
    margin: 2rem auto;
    padding: 1rem;
    position: absolute;
    top: 40px;
    left: 0;
    right: 0;
    bottom: 40px;
    max-height: 86vh;
    overflow: auto;
}

.modal>div>pre {
    white-space: pre-line;
    overflow-y: auto;
    padding: 0 1rem;
    max-height: 74vh;
}

.modal>div>.actions {
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
}

.modal>div>.actions a {
    cursor: pointer;
}

.feature-display {
    max-width: 1300px;
    overflow: visible;
    display: inline-flex;
    align-items: center;
    justify-content: flex-start;
}

.feature-display img {
    flex: 0 0 auto;
    order: 2;
}

.feature-display .description {
    flex: 1 0 auto;
    padding: 0 10px 0 58px;
    max-width: 600px;
    text-align: left;
}

.feature-display .description p {
    line-height: 1.5;
    font-size: 1.4em;
    font-weight: 400;
}

.feature-display .description h2 {
    font-size: 2.8em;
    gap: 10px;
    position: relative;
    letter-spacing: -.003em;
    font-weight: 800;
}

.menu {
    width: 100%;
    display: flex;
}

.next {
    background-color: #1d222cad;
    padding: 1rem;
    position: fixed;
    right: 10px;
    bottom: 10px;
    border-radius: 4px;
    z-index: 1;
    color: #fff;
    -webkit-backdrop-filter: saturate(100%) blur(18px);
    backdrop-filter: saturate(100%) blur(18px);
}

.next p {
    margin: 0;
}

.next .container {
    padding: 0;
    max-width: 1200px;
}

.next a {
    color: #fff;
    font-weight: 500;
}

.heading .center {
    text-align: center;
}

input[type="text"],
input[type="email"],
input[type="password"],
input[type="search"] {
    font-size: 21px;
    padding: 10px;
    min-width: 510px;
    border-radius: 4px;
    border: 2px solid transparent;
    outline: none;
    box-shadow: 0 1px 3px rgb(0 0 0 / 10%), 0 5px 10px rgb(0 0 0 / 6%), 0 1px 0 0 #d7d7d7;
}

input[type="text"]:focus,
input[type="email"]:focus,
input[type="password"]:focus,
input[type="search"]:focus {
    border-color: #1c71d8;
    box-shadow: 0 0 13px 0 #2263db66, 0 1px 3px rgb(0 0 0 / 10%), 0 5px 10px rgb(0 0 0 / 6%), 0 1px 0 0 #d7d7d7;
}
/* ... */

